<resources>
    <string name="app_name">Gestao Saúde</string>
    <!-- nomes do menu -->
    <string name="action_home">Home</string>
    <string name="action_noticias">Notícias</string>
    <string name="action_questionario">Questionário</string>
    <string name="action_utilidades">Utilidades</string>
    <string name="action_configuracao">Configuração</string>

    <string name="action_action_IMC">Calcular IMC</string>
    <string name="action_Exercicio">Dica de Exercícios IMC</string>
    <string name="action_Dieta">Dicas de Dieta IMC</string>
    <string name="title_activity_medalhas">Medalhas</string>
    <string name="medalhas">Medalhas</string>
    <string name="facanhas">Façanhas</string>
    <string name="cD_medalhas">Botão medalhas</string>
    <string name="cD_trofeu">Botão troféu</string>
    <string name="trofeus">Trofeus</string>
    <string name="cD_conquistas">Botao conquistas</string>
    <string name="conquistas">Conquistas</string>
    <string name="desafios">Desafios</string>
    <string name="questionarios">Questionários</string>
    <string name="nome_medalha_prev">Nome da Medalha</string>
    <string name="medal_icon_dsc">Icone que representa a medalha</string>
    <string name="xp_txt">Experiência: </string>
    <string name="dd_mm_aaaa_format">DD/MM/AAAA</string>
    <string name="txt_dsc_medalha">Descrição da medalha</string>
    <string name="data_criacao">Data de criação:</string>
    <string name="xp_count_format">00XP</string>
    <string name="qtd_owned_by_user_label">Quantidade obtida pelo usuário:</string>
    <string name="zero">0</string>
    <string name="medalha_label">Medalha</string>
    <string name="descricao_label">Descrição:</string>
    <string name="lista_de_desafios_header">Lista de Desafios:</string>
    <string name="metas">Metas</string>
    <string name="voltar">Voltar</string>
    <string name="iniciar_desafio">Iniciar Desafio</string>
    <string name="criado_em">Criado em:</string>
    <string name="descricao">Descrição</string>
    <string name="titulo_do_desafio">Título do Desafio</string>
    <string name="realizando_desafio">Realizando Desafio</string>
    <string name="passos_label">Passos:</string>
    <string name="tempo_label">Tempo:</string>
    <string name="_00">00</string>
    <string name="hh_mm_ss">00:00:00</string>
    <string name="meta_atual_label">Meta atual:</string>
    <string name="iniciar">Iniciar</string>
    <string name="flag_meta_selecionada">Meta Selecionada</string>
    <string name="tempo_limite">Tempo limite</string>
    <string name="tipo">Tipo</string>
    <string name="quantidade">quantidade</string>
    <string name="descricao_da_meta">Descrição da meta</string>
    <string name="titulo_da_meta">Titulo da meta</string>
    <string name="meta_n_0">META Nº0</string>
    <string name="nome_label">Nome:</string>
    <string name="titulo_label">Título:</string>
    <string name="nome_hint_label">Nome</string>
    <string name="descricao_hint_label">Descrição</string>
    <string name="metas_hint_label">Metas</string>
    <string name="metas_label">Metas:</string>
    <string name="save_new_label">Salvar Novo</string>
    <string name="premiacao_label">Premiação:</string>
    <string name="cancel_label">Cancelar</string>
    <string name="status_label">Status:</string>
    <string name="data_desafio_concluido_label">Concluído em:</string>
    <!-- ******************************************** -->
</resources>
