<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="alexandre.healthhigh.NoticiaActivityOLD">

    <item
        android:id="@+id/action_noticias"
        android:orderInCategory="100"
        android:title="@string/action_noticias"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_questionario"
        android:orderInCategory="100"
        android:title="@string/action_questionario"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_utilidades"
        android:orderInCategory="100"
        android:title="@string/action_utilidades"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_configuracao"
        android:orderInCategory="100"
        android:title="@string/action_configuracao"
        app:showAsAction="never" />
</menu>
