<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="200sp"
            android:adjustViewBounds="true"
            android:background="#59EEEEEE"
            android:src="@drawable/medal"
            android:contentDescription="@string/medal_icon_dsc"
            android:id="@+id/medalhaIcone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/l1_tittle"
            android:id="@+id/nomeMedalha"
            android:layout_below="@id/medalhaIcone"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/descricao_label"
            android:id="@+id/descricaoMedalha_label"
            android:layout_below="@id/nomeMedalha"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dscMedalha"
            android:text="@string/txt_dsc_medalha"
            android:padding="5dp"
            android:layout_below="@id/descricaoMedalha_label"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/oneLineText"
            android:textStyle="bold"
            android:id="@+id/dataInsercaoMedalha_label"
            android:layout_below="@id/dscMedalha"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/data_criacao"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/oneLineText"
            android:id="@+id/dataInsercaoMedalha"
            android:layout_below="@id/dscMedalha"
            android:layout_toEndOf="@id/dataInsercaoMedalha_label"
            android:text="@string/dd_mm_aaaa_format"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/oneLineText"
            android:id="@+id/qtdXPMedalha_label"
            android:textStyle="bold"
            android:layout_below="@id/dataInsercaoMedalha_label"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/xp_txt"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/qtdXPMedalha"
            style="@style/oneLineText"
            android:text="@string/xp_count_format"
            android:layout_below="@+id/dataInsercaoMedalha_label"
            android:layout_toEndOf="@+id/dataInsercaoMedalha_label" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/qtdMedalhasObtidas_label"
            style="@style/oneLineText"
            android:textStyle="bold"
            android:layout_below="@id/qtdXPMedalha_label"
            android:layout_marginEnd="10dp"
            android:text="@string/qtd_owned_by_user_label"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nMedalhasAssociadas"
            style="@style/oneLineText"
            android:layout_below="@id/qtdMedalhasObtidas_label"
            android:layout_marginStart="10dp"
            android:text="@string/zero"/>
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>