<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:orientation="vertical"
    android:padding="5dp">
    <ImageView
        android:layout_width="100sp"
        android:layout_height="105sp"
        android:src="@drawable/medal"
        android:layout_gravity="center"
        android:id="@+id/imgIconeMedalha"
        android:contentDescription="@string/medal_icon_dsc"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="15sp"
        android:maxLines="1"
        android:ellipsize="end"
        android:id="@+id/nomeMedalha"
        android:text="@string/nome_medalha_prev"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/experienciaMedalha"
        android:textSize="14sp"
        android:text="@string/xp_txt"
        android:textAlignment="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="12sp"
        android:id="@+id/dataInsercaoMedalha"
        android:text="@string/dd_mm_aaaa_format"
        />
</LinearLayout>
