<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:text="@string/meta_n_0"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        android:id="@+id/numeroMeta"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/flagMetaSelecionada" />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tituloMeta"
        style="@style/oneLineText"
        android:text="@string/titulo_da_meta"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/numeroMeta"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/descricao_da_meta"
        style="@style/twoLineText"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="7dp"
        app:layout_constraintLeft_toRightOf="@+id/numeroMeta"
        app:layout_constraintTop_toBottomOf="@+id/tituloMeta"
        app:layout_constraintHorizontal_bias="0.533"
        android:id="@+id/descricaoMeta" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipo"
        app:layout_constraintLeft_toRightOf="@+id/numeroMeta"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/descricaoMeta"
        android:id="@+id/tipoMeta" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantidade"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tipoMeta"
        app:layout_constraintLeft_toRightOf="@+id/numeroMeta"
        android:layout_marginStart="8dp"
        android:id="@+id/quantidadeTipoMeta" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tempo_limite"
        android:id="@+id/tempoMeta"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/quantidadeTipoMeta"
        app:layout_constraintLeft_toRightOf="@+id/numeroMeta"
        android:layout_marginStart="8dp" />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/flag_meta_selecionada"
        android:textStyle="bold"
        android:visibility="gone"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:id="@+id/flagMetaSelecionada"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tempoMeta" />
</android.support.constraint.ConstraintLayout>