<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/formulario_desafio_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/nome_hint_label"
        tools:layout_editor_absoluteX="0dp" />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/formulario_desafio_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formulario_desafio_name"
        android:hint="@string/descricao_hint_label"
        tools:layout_editor_absoluteX="0dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/metas_label"
        android:id="@+id/formulario_desafio_metas_label"
        app:layout_constraintTop_toBottomOf="@+id/formulario_desafio_desc"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/l1_title"
        tools:layout_editor_absoluteX="0dp" />
    <Spinner
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:id="@+id/formulario_desafio_metas"
        app:layout_constraintTop_toBottomOf="@+id/formulario_desafio_metas_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:prompt="@string/metas_hint_label"
        tools:layout_editor_absoluteX="0dp">
    </Spinner>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Adicionar"
        android:id="@+id/formulario_desafio_add_meta"
        app:layout_constraintTop_toBottomOf="@+id/formulario_desafio_metas"
        app:layout_constraintEnd_toStartOf="@+id/formulario_desafio_upd_meta"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Alterar"
        android:id="@+id/formulario_desafio_upd_meta"
        app:layout_constraintTop_toBottomOf="@+id/formulario_desafio_metas"
        app:layout_constraintEnd_toEndOf="parent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/premiacao_label"
        android:id="@+id/formulario_desafio_premiacao_label"
        app:layout_constraintTop_toBottomOf="@+id/formulario_desafio_add_meta"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/l1_title"
        android:layout_marginTop="8dp" />
    <Spinner
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:id="@+id/formulario_desafio_premiacao"
        app:layout_constraintTop_toBottomOf="@+id/formulario_desafio_premiacao_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:prompt="@string/metas_hint_label"
        tools:layout_editor_absoluteX="0dp">
    </Spinner>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/save_new_label"
        android:id="@+id/formulario_desafio_save"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toLeftOf="@+id/formulario_desafio_cancel" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_label"
        android:id="@+id/formulario_desafio_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>