<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/opcoesMenuFacanha">
    <TextView
        android:id="@+id/headerFacanhas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:text="@string/facanhas"
        android:background="#eee"
        android:padding="10dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <ImageButton
        android:contentDescription="@string/cD_medalhas"
        android:id="@+id/btnMenuMedalhas"
        android:background="@null"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:scaleType="fitCenter"
        android:src="@drawable/medalhacolorida1"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btnMenuTrofeus"
        app:layout_constraintTop_toBottomOf="@id/headerFacanhas" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/medalhas"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/btnMenuMedalhas"
        app:layout_constraintRight_toRightOf="@+id/btnMenuMedalhas"
        app:layout_constraintTop_toBottomOf="@+id/btnMenuMedalhas"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintVertical_bias="1.0" />
    <ImageButton
        android:contentDescription="@string/cD_trofeu"
        android:id="@+id/btnMenuTrofeus"
        android:src="@drawable/trofeucolorido1"
        android:background="@null"
        android:scaleType="fitCenter"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@+id/btnMenuMedalhas"
        app:layout_constraintRight_toLeftOf="@+id/btnMenuConquistas"
        app:layout_constraintTop_toBottomOf="@id/headerFacanhas"
        android:layout_marginTop="8dp" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/trofeus"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/btnMenuTrofeus"
        app:layout_constraintRight_toRightOf="@+id/btnMenuTrofeus"
        app:layout_constraintTop_toBottomOf="@+id/btnMenuTrofeus" />
    <ImageButton
        android:contentDescription="@string/cD_conquistas"
        android:src="@drawable/conquista"
        android:background="@null"
        android:id="@+id/btnMenuConquistas"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:scaleType="fitCenter"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btnMenuTrofeus"
        app:layout_constraintTop_toBottomOf="@id/headerFacanhas"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/conquistas"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/btnMenuConquistas"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/btnMenuConquistas"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMenuConquistas"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>