<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollDetalheDesafio"
    android:fillViewport="true"
    >
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tituloDetalhesDesafio"
            android:text="@string/titulo_do_desafio"
            android:maxLines="2"
            android:ellipsize="end"
            android:textSize="20sp"
            android:background="#eee"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/descricao_label"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tituloDetalhesDesafio"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/textView10" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/criado_em"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tituloDetalhesDesafio"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toLeftOf="@+id/dataCriacaoDetalheDesafio"
            android:id="@+id/textView9" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dd_mm_aaaa_format"
            android:id="@+id/dataCriacaoDetalheDesafio"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tituloDetalhesDesafio" />
        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="#BBB"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/view" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/descricaoDetalheDesafio"
            android:text="@string/descricao"
            android:padding="10dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/headerMetas"
            android:text="@string/metas"
            android:padding="8dp"
            style="@style/lista_header"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descricaoDetalheDesafio"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/listaMetasDesafio"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:maxHeight="100dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerMetas"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />
        <Button
            android:id="@+id/botaoIniciar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/iniciar_desafio"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listaMetasDesafio"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>
