<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lista"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/passos_label"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:id="@+id/nPassos_label" />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="40sp"
        android:id="@+id/nPassos"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/nPassos_label"
        app:layout_constraintHorizontal_bias="0.0" />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tempo_label"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/nPassos"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/tempoDecorrido" />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hh_mm_ss"
        android:textSize="40sp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tempoDecorrido"
        android:id="@+id/textView14"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />
    <!--<TextView-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/meta_atual_label"-->
        <!--android:layout_marginTop="10dp"-->
        <!--style="@style/lista_header"-->
        <!--android:padding="8dp"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/textView14"-->
        <!--android:layout_marginRight="8dp"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--android:layout_marginLeft="8dp"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--android:id="@+id/textView15" />-->
    <!--<android.support.v7.widget.RecyclerView-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/listaMetasRealizando"-->
        <!--android:layout_marginRight="8dp"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--android:layout_marginLeft="8dp"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--android:layout_marginTop="0dp"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/textView15"/>-->
</android.support.constraint.ConstraintLayout>